<?xml version="1.0"?>
<package format="2">
  <name>i2v</name>
  <version>1.12.0</version>
  <description>The i2v package</description>
  <maintainer email="sai.hideyasu@sit.ac.jp">sai_hideyasu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>autoware_config_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>cryptography_aes</depend>
  <depend>tf</depend>
</package>
